// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SNAPSHOT TESTS QueryField Component should render properly 1`] = `
<Styled(div)
  p={3}
>
  <ForwardRef
    htmlFor="query"
  >
    Keywords
  </ForwardRef>
  <ForwardRef
    id="some-id"
    name="some-name"
    onSubmit={[Function]}
    required={true}
  />
</Styled(div)>
`;

exports[`SNAPSHOT TESTS SearchForm Component should render properly 1`] = `
<Styled(div)
  p={3}
  sx={
    Object {
      "maxWidth": 1024,
      "mx": "auto",
      "px": 3,
    }
  }
>
  <ForwardRef
    color="primary"
    fontSize={
      Array [
        5,
        6,
        7,
      ]
    }
    p={3}
    textAlign="center"
  >
    GitHub Respositories Search
  </ForwardRef>
  <Styled(div)
    p={3}
  >
    <Formik
      initialValues={
        Object {
          "order": "desc",
          "query": "",
          "sort": "",
        }
      }
      onSubmit={[Function]}
    >
      <Component />
    </Formik>
  </Styled(div)>
  <Styled(div)
    p={3}
  >
    <Styled(div)
      flexWrap="wrap"
      justifyContent="center"
    />
  </Styled(div)>
</Styled(div)>
`;

exports[`SNAPSHOT TESTS SortSelect Component should render properly 1`] = `
<Styled(div)
  p={3}
>
  <ForwardRef
    htmlFor="sort"
  >
    Sort
  </ForwardRef>
  <ForwardRef
    id="some-id"
    name="some-name"
    onSubmit={[Function]}
    required={true}
  >
    <option
      value=""
    >
      Best Match
    </option>
    <option
      value="stars"
    >
      Stars
    </option>
    <option
      value="forks"
    >
      Forks
    </option>
    <option
      value="help-wanted-issues"
    >
      Help Wanted Issues
    </option>
    <option
      value="updated"
    >
      Updated
    </option>
  </ForwardRef>
</Styled(div)>
`;
